[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepher"
version = "0.1.0"
description = "Universal Isaac Lab Environments Platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BUSL-1.1"}
authors = [
    {name = "Nepher Contributors"}
]
keywords = ["isaac-lab", "robotics", "environments", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
keyring = [
    "keyring>=23.0",
]
isaaclab = [
    "isaaclab",
]

[project.scripts]
nepher = "nepher.cli.main:main"

[project.urls]
Homepage = "https://github.com/your-org/envhub"
Documentation = "https://github.com/your-org/envhub#readme"
Repository = "https://github.com/your-org/envhub"
Issues = "https://github.com/your-org/envhub/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nepher*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

